# codex

./: .codespellignore  .gitignore  AGENTS.md  BUILD.bazel  announcement_tip.toml  codex_send.sh  defs.bzl  justfile
.codex/: PLAN.md
.codex/skills/codex-connectivity-fix/: SKILL.md
.codex/skills/codex-rs-build-troubleshoot/: SKILL.md
.codex/skills/codex-safe-sandbox-no-approval/: SKILL.md
.codex/skills/repo-full-access-setup/: SKILL.md
.github/scripts/: run-bazel-ci.sh
.github/workflows/: bazel.yml  ci.yml  rust-ci.yml  sdk.yml  siyuan-npm-linux-x64.yml  v8-canary.yml
codex-cli/: package.json
codex-rs/: CLAUDE.md  Cargo.toml  deny.toml  oss_codex.sh
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/src/: export.rs  schema_fixtures.rs
codex-rs/app-server-test-client/: Cargo.toml  README.http-bridge.md
codex-rs/app-server-test-client/web-demo/: README.md  bridge-helper.js  index.html
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_manager_service.rs  message_processor.rs
codex-rs/backend-client/src/: client.rs
codex-rs/cli/src/: main.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/feedback/: Cargo.toml
codex-rs/llamacpp/: BUILD.bazel  Cargo.toml
codex-rs/llamacpp/src/: client.rs  lib.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/tools/: README.md
codex-rs/tui/: BUILD.bazel  Cargo.toml  tooltips.txt
docs/: app-server-http-mvp.md
scripts/: build-local-codex-debug.sh  ensure_local_qwen_stack.sh  local_qwen_alias_proxy.py  stage_siyuan_npm_package.py
(+249 files in other folders)
