[package]
name = "codex-app-server-test-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
clap = { workspace = true, features = ["derive", "env"] }
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["v4"] }
