[package]
name = "codex-llamacpp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_llamacpp"
path = "src/lib.rs"

[dependencies]
codex-core = { workspace = true }
codex-model-provider-info = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }

[lints]
workspace = true
